<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="word"
            type="cn.kk.roomdemo.viewmodel.WordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activitys.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="41dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                style="@style/btnGreenStyle"
                android:text="@string/add" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnDelete"
                style="@style/btnGreyStyle"
                android:text="@string/delete" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnModify"
                style="@style/btnOrangeStyle"
                android:text="@string/modify" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnClear"
                style="@style/btnRedStyle"
                android:text="@string/clear" />
        </LinearLayout>

    </RelativeLayout>
</layout>